--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
       <button class="navbar-toggler ml-auto" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse"> <span class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span> </button>
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="index.html">Inicio</a> </li>
           <li class="nav-item"> <a class="nav-link" href="index.html#about" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
           <li class="nav-item"> <a class="nav-link" href="index.html#activity" tabindex="-1" aria-disabled="true">Atividades</a></li>
           <li class="nav-item"> <a class="nav-link" href="index.html#portfolio" tabindex="-1" aria-disabled="true">Portfolio</a></li>
