--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <button class="navbar-toggler ml-auto" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse"> <span class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span> </button>
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item active"> <a class="nav-link" href="#">Home</a> </li>
+          <li class="nav-item active"> <a class="nav-link" href="#">Inicio</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#about" tabindex="-1" aria-disabled="true">Sobre Nós</a></li>
           <li class="nav-item"> <a class="nav-link" href="#activity" tabindex="-1" aria-disabled="true">Atividades</a></li>
           <li class="nav-item"> <a class="nav-link" href="#portfolio" tabindex="-1" aria-disabled="true">Portfolio</a></li>
