--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
   <div class="container-fluid fh5co-two-img">
     <div class="row">
       <div class="col-sm-6 pr-0 pl-0">
-        <div class="card"> <img class="card-img" src="assets/img/eduino3.jpg" alt="">
+        <div class="card"> <img class="card-img" src="assets/img/IMG_3393.jpg" alt="">
           <div class="card-img-overlay"> </div>
         </div>
       </div>
       <div class="col-sm-6 pr-0 pl-0">
-        <div class="card"> <img class="card-img" src="assets/img/eduino2.jpg" alt="">
+        <div class="card"> <img class="card-img" src="assets/img/IMG_3393.jpg" alt="">
           <div class="card-img-overlay"> </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
     <div class="container contact-pop">
       <div class="row">
         <div class="col-md-6  pr-0">
-          <div class="card"> <img class="card-img w-100" src="assets/img/eduino1.jpg" alt="">
+          <div class="card"> <img class="card-img w-100" src="assets/img/IMG_3393.jpg" alt="">
             <div class="card-img-overlay"> </div>
           </div>
         </div>
