--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
   <div class="container-fluid fh5co-two-img">
     <div class="row">
       <div class="col-sm-6 pr-0 pl-0">
-        <div class="card"> <img class="card-img" src="assets/img/IMG_3393.jpg" alt="">
+        <div class="card"> <img class="card-img" src="assets/img/IMG_3393.JPG" alt="">
           <div class="card-img-overlay"> </div>
         </div>
       </div>
       <div class="col-sm-6 pr-0 pl-0">
-        <div class="card"> <img class="card-img" src="assets/img/IMG_3393.jpg" alt="">
+        <div class="card"> <img class="card-img" src="assets/img/IMG_3393.JPG" alt="">
           <div class="card-img-overlay"> </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
     <div class="container contact-pop">
       <div class="row">
         <div class="col-md-6  pr-0">
-          <div class="card"> <img class="card-img w-100" src="assets/img/IMG_3393.jpg" alt="">
+          <div class="card"> <img class="card-img w-100" src="assets/img/IMG_3393.JPG" alt="">
             <div class="card-img-overlay"> </div>
           </div>
         </div>
@@ -212,7 +212,7 @@
             </div>
             <div class="bx bx-8">
               <div class="card"> <img class="card-img" src="assets/img/portfolio-img8.png" alt="">
-                <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                <div class="card-img-overlay"> <a href="#"><img src="assets/img/" class="DSC_0497.jpg" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title">Fotografia de casamento</h5>
                   </div>
