--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             </div>
             <div class="bx bx-8">
               <div class="card"> <img class="card-img" src="assets/img/portfolio-img8.png" alt="">
-                <div class="card-img-overlay"> <a href="#"><img src="assets/img/" class="DSC_0497.jpg" alt="heart icon"></a>
+                <div class="card-img-overlay"> <a href="#"><img src="assets/img/DSC_0497.jpg" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title">Fotografia de casamento</h5>
                   </div>
