--- a/index.html
+++ b/index.html
@@ -86,8 +86,20 @@
             <h3>Eu sou o Eduino Sousa</h3>
             <h4>Fotografo profissional</h4>
             <hr />
-            <p>Olá, tenho 17 anos nasci em Luanda, Angola, estou a fazer o último ano do ensino médio, curso marketing. 
-               Sempre fui apaixonado por fotografias. O meu sonho é fazer da DreamerPhotography a melhor de Angola e possivelmente a melhor de África, ou melhor, do Mundo.</p>
+            <p>Saudações, prezado(a)!
+
+A empresa Dreamer Photography, é uma empresa de direito Angola. Está constituída por um grupo de 5 jovens sonhadores. Decidimos seguir a nossa paixão pela fotografia e aliamos à profissão e aqui estamos! 
+
+Somos especialistas na arte de captar felicidade e eternizar o momento.
+
+Conte connosco para cada etapa da sua vida. A nossa lente guardará os melhores momentos do seu noivado, do casamento, da gravidez, dos primeiros dias dos seus filhos e da sua família e muito mais.
+
+Fotografar é guardar em clicks os momentos, que ficarão para sempre na memória, mas o que também poderão se partilhar aos olhos dos mais pequenos, da família e de todos os que não estiveram presentes. 
+
+Estamos disponíveis para trabalhos empresárias, nomeadamente, na área publicitária e eventos musicais.
+
+
+Aguardamos o seu contacto!</p>
             <a href="#" class="btn">CONTATO</a> </div>
           </div>
         </div>
@@ -211,8 +223,8 @@
               </div>
             </div>
             <div class="bx bx-8">
-              <div class="card"> <img class="card-img" src="assets/img/portfolio-img8.png" alt="">
-                <div class="card-img-overlay"> <a href="#"><img src="assets/img/DSC_0497.jpg" class="heart" alt="heart icon"></a>
+              <div class="card"> <img class="card-img" src="assets/img/DSC_0497.jpg" alt="">
+                <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
                     <h5 class="card-title">Fotografia de casamento</h5>
                   </div>
