--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <h3>Eu sou o Eduino Sousa</h3>
             <h4>Fotografo profissional</h4>
             <hr />
-            <p>Saudações, prezado(a)!
+            <p>Saudações, prezado(a)! <br>
 
 A empresa Dreamer Photography, é uma empresa de direito Angola. Está constituída por um grupo de 5 jovens sonhadores. Decidimos seguir a nossa paixão pela fotografia e aliamos à profissão e aqui estamos! 
 
