--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         </div>
         <div class="col-md-6 pl-0" id="about">
           <div class="content">
-            <h3>Eu sou o Eduino Sousa</h3>
-            <h4>Fotografo profissional</h4>
+            <h3> Dreamer Photography</h3>
+            <h4>Empresa de fotografia</h4>
             <hr />
             <p>Saudações, prezado(a)! <br>
 
