--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <hr />
             <p>Saudações, prezado(a)! <br>
 
-A empresa Dreamer Photography, é uma empresa de direito Angola. Está constituída por um grupo de 5 jovens sonhadores. Decidimos seguir a nossa paixão pela fotografia e aliamos à profissão e aqui estamos! 
+A empresa Dreamer Photography, é uma empresa de direito angolano. Está constituída por um grupo de 5 jovens sonhadores. Decidimos seguir a nossa paixão pela fotografia e aliamos à profissão e aqui estamos! 
 
 Somos especialistas na arte de captar felicidade e eternizar o momento.
 
@@ -96,7 +96,7 @@ Conte connosco para cada etapa da sua vida. A nossa lente guardará os melhores 
 
 Fotografar é guardar em clicks os momentos, que ficarão para sempre na memória, mas o que também poderão se partilhar aos olhos dos mais pequenos, da família e de todos os que não estiveram presentes. 
 
-Estamos disponíveis para trabalhos empresárias, nomeadamente, na área publicitária e eventos musicais.
+Estamos disponíveis para trabalhos empresariais, nomeadamente, na área publicitária e eventos musicais.
 
 
 Aguardamos o seu contacto!</p>
@@ -119,20 +119,20 @@ Aguardamos o seu contacto!</p>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/modelo4.jpg" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/IMG_123.jpg" alt="">
                 <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title">@Domingas Eduardo Ngunza</h5>
+                    <h5 class="card-title">@Hernane e Jany</h5>
                     <p class="card-text"> Dreamer Photography</p>
                   </div>
                 </div>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/modelo7.1.jpg" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/IMG_0300.JPG" alt="">
                 <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                   <div class="bottom-text">
-                    <h5 class="card-title"> @Márcia Chieva</h5>
+                    <h5 class="card-title">@Shalom Muginga</h5>
                     <p class="card-text">Dreamer Photography </p>
                   </div>
                 </div>
@@ -144,6 +144,16 @@ Aguardamos o seu contacto!</p>
                   <div class="bottom-text">
                     <h5 class="card-title">@Domingas Eduardo Ngunza</h5>
                     <p class="card-text">Dreamer Photographys</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div>
+              <div class="card"> <img class="card-img" src="assets/img/IMG_0942.jpg" alt="">
+                <div class="card-img-overlay"> <a href="" target="_blank"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
+                  <div class="bottom-text">
+                    <h5 class="card-title">@Josefania dos Santos</h5>
+                    <p class="card-text">Dreamer Photography </p>
                   </div>
                 </div>
               </div>
