--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@ Aguardamos o seu contacto!</p>
       <h2>Portfolios</h2>
       <div class="row">
         <div class="bx bx-1">
-          <div class="card"> <img class="card-img" src="assets/img/portfolio-img1.png" alt="">
+          <div class="card"> <img class="card-img" src="assets/img/IMG_0303.JPG" alt="">
             <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Sítio natural</h5>
+                <h5 class="card-title">Sessão fotográfica em estúdio</h5>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@ Aguardamos o seu contacto!</p>
             <div class="card"> <img class="card-img" src="assets/img/portfolio-img5.png" alt="">
               <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                 <div class="bottom-text">
-                  <h5 class="card-title">Lorem ipsum dolor</h5>
+                  <h5 class="card-title">Gestante</h5>
                 </div>
               </div>
             </div>
@@ -217,7 +217,7 @@ Aguardamos o seu contacto!</p>
             <div class="card"> <img class="card-img" src="assets/img/portfolio-img6.png" alt="">
               <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
                 <div class="bottom-text">
-                  <h5 class="card-title">Lorem ipsum dolor</h5>
+                  <h5 class="card-title">Recém Nascido</h5>
                 </div>
               </div>
             </div>
