--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <hr />
             <p>Saudações, prezado(a)! <br>
 
-A empresa Dreamer Photography, é uma empresa de direito angolano. Está constituída por um grupo de 5 jovens sonhadores. Decidimos seguir a nossa paixão pela fotografia e aliamos à profissão e aqui estamos! 
+A Dreamer Photography é uma empresa de direito angolano. Está constituída por um grupo de 5 jovens sonhadores. Decidimos seguir a nossa paixão pela fotografia e aliamos à profissão e aqui estamos! 
 
 Somos especialistas na arte de captar felicidade e eternizar o momento.
 
