--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Aguardamos o seu contacto!</p>
       
     </div>
     <div class="copy pt-4 pb-4">
-      <p><a href="https://freehtml5.co/" target="_blank"> &copy; 2019 Girly</a>  &nbsp;  |  &nbsp; Design by <a href="https://freehtml5.co/" target="_blank">freehtml5.co</a> &nbsp; | &nbsp;  All rights reserved</p>
+      <p><a href="https://freehtml5.co/" target="_blank"> &copy; 2021 RQZ</a>  &nbsp;  |  &nbsp; Design by <a href="https://freehtml5.co/" target="_blank">Riqueza CM</a> &nbsp; | &nbsp;  All rights reserved</p>
     </div>
   </footer>
 
