--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Aguardamos o seu contacto!</p>
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo4.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0158 2.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -302,7 +302,7 @@ Aguardamos o seu contacto!</p>
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo6.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0164.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -312,7 +312,7 @@ Aguardamos o seu contacto!</p>
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo7.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0150.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -322,7 +322,7 @@ Aguardamos o seu contacto!</p>
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo8.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0151.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -332,7 +332,7 @@ Aguardamos o seu contacto!</p>
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo9.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0153.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -342,7 +342,7 @@ Aguardamos o seu contacto!</p>
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo10.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/DSC_0173 2.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -351,7 +351,7 @@ Aguardamos o seu contacto!</p>
               </div>
             </div>
           </div>
-		   <div class="card"> <img class="card-img" src="assets/img/modelo11.jpg" alt="">
+		   <div class="card"> <img class="card-img" src="assets/img/DSC_0204 2.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
