--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Aguardamos o seu contacto!</p>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="carousel-caption d-md-block"> <img src="assets/img/quote-icon.png" alt="">
+          <div class="carousel-caption d-md-block"> <img src="assets/img/DSC_0164.jpg" alt="">
             <p>Foi incrível ter trabalhado com a DreamerPhotography, ajudaram-me a  descobrir o melhor que havia em mim, também mostraram-me o meu potencial como modelo. Gratidão! </p>
           </div>
         </div>
