--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ Aguardamos o seu contacto!</p>
           </div>
         </div>
         <div class="carousel-item">
-          <div class="carousel-caption d-md-block"> <img src="assets/img/DSC_0164.jpg" alt="">
+          <div class="carousel-caption d-md-block"> <img src="assets/img/quote-icon.png" alt="">
             <p>Foi incrível ter trabalhado com a DreamerPhotography, ajudaram-me a  descobrir o melhor que havia em mim, também mostraram-me o meu potencial como modelo. Gratidão! </p>
           </div>
         </div>
@@ -397,7 +397,7 @@ Aguardamos o seu contacto!</p>
         </div>
       </div>
       <ol class="carousel-indicators">
-        <li data-target="#my-carousel" data-slide-to="0" > <img src="assets/img/about-me-img1.png" alt=""> <span>Riqueza xIx</span> </li>
+        <li data-target="#my-carousel" data-slide-to="0" > <img src="assets/img/DSC_0164.jpg" alt=""> <span>Riqueza xIx</span> </li>
         <li class="active" data-target="#my-carousel" data-slide-to="1" aria-current="location"> <img src="assets/img/about-me-img2.png" alt=""> <span>Sherrie Rose</span> </li>
         <li data-target="#my-carousel" data-slide-to="2"> <img src="assets/img/about-me-img3.png" alt=""> <span>Dominga E. Ngunza</span> </li>
       </ol>
