--- a/index.html
+++ b/index.html
@@ -408,13 +408,17 @@ Aguardamos o seu contacto!</p>
       <div class="row mb-5 pb-5">
         <div class="col-lg-6">
           <div class="twit-box">
-            <div class="media mb-3"> <img class="align-self-start mr-3 rounded-circle" src="assets/img/twit-girl-img.png" alt="">
+            <div class="media mb-3"> <img class="align-self-start mr-3 rounded-circle" src="assets/img/dps.jpg" alt="">
               <div class="media-body">
                 <h5 class="mb-0 mt-3">DreamerPhotography</h5>
                 <p>@DreamerPhotography5</p>
               </div>
             </div>
-            <p class="text-justify"> “Sed ut perspiciatis unde omnis iste nats error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut. </p>
+            <p class="text-justify"> “🪄 UM CLICK DE OURO|📸
+Eventos • Sessões fotográficas
+🎯WhatsApp| +244 943086932
+🎯Dicas Exclusivas sobre fotografia
+</p>
             <div class="clearfix"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank" class="btn btn-primary mt-2 float-right">Follow</a> </div>
           </div>
         </div>
@@ -422,12 +426,12 @@ Aguardamos o seu contacto!</p>
           <h2>Instagram feed</h2>
           <div class="owl-carousel owl-carousel4 owl-theme">
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/feed-img1.png" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/IMG_3676.JPG" alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/feed-img2.png"  alt="">
+              <div class="card"> <img class="card-img" src="assets/img/IMG_3677.jpg"  alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
