--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ Aguardamos o seu contacto!</p>
         </div>
       </div>
       <ol class="carousel-indicators">
-        <li data-target="#my-carousel" data-slide-to="0" > <img src="assets/img/DSC_0164.jpg" alt=""> <span>Riqueza xIx</span> </li>
+        <li data-target="#my-carousel" data-slide-to="0" > <img src="assets/img/dps.jpg" alt=""> <span>Riqueza xIx</span> </li>
         <li class="active" data-target="#my-carousel" data-slide-to="1" aria-current="location"> <img src="assets/img/about-me-img2.png" alt=""> <span>Sherrie Rose</span> </li>
         <li data-target="#my-carousel" data-slide-to="2"> <img src="assets/img/about-me-img3.png" alt=""> <span>Dominga E. Ngunza</span> </li>
       </ol>
@@ -426,7 +426,7 @@ Eventos • Sessões fotográficas
           <h2>Instagram feed</h2>
           <div class="owl-carousel owl-carousel4 owl-theme">
             <div>
-              <div class="card"> <img class="card-img" src="assets/img/IMG_3677.JPG" alt="">
+              <div class="card"> <img class="card-img" src="assets/img/IMG_3677.jpg" alt="">
                 <div class="card-img-overlay"> </div>
               </div>
             </div>
