--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ Eventos • Sessões fotográficas
 🎯WhatsApp| +244 943086932
 🎯Dicas Exclusivas sobre fotografia
 </p>
-            <div class="clearfix"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank" class="btn btn-primary mt-2 float-right">Follow</a> </div>
+            <div class="clearfix"> <a href="https://www.instagram.com/dreamerphotography5/" target="_blank" class="btn btn-primary mt-2 float-right">Seguir</a> </div>
           </div>
         </div>
         <div class="col-lg-6 feed-caro">
