--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active"> <a class="nav-link" href="#">Inicio</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#about" tabindex="-1" aria-disabled="true">Sobre Nós</a></li>
+          <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre Nós</a></li>
           <li class="nav-item"> <a class="nav-link" href="#activity" tabindex="-1" aria-disabled="true">Atividades</a></li>
           <li class="nav-item"> <a class="nav-link" href="#portfolio" tabindex="-1" aria-disabled="true">Portfolio</a></li>
           <li class="nav-item"> <a class="nav-link" href="#testimonial" tabindex="-1" aria-disabled="true">Testemuhos</a></li>
