--- a/sobrenos.html
+++ b/sobrenos.html
@@ -22,11 +22,11 @@
       <div id="my-nav" class="collapse navbar-collapse">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Inicio</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="index.html#about" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
+          <li class="nav-item active"> <a class="nav-link" href="index.html#about" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
           <li class="nav-item"> <a class="nav-link" href="index.html#activity" tabindex="-1" aria-disabled="true">Atividades</a></li>
           <li class="nav-item"> <a class="nav-link" href="index.html#portfolio" tabindex="-1" aria-disabled="true">Portfolio</a></li>
           <li class="nav-item"> <a class="nav-link" href="index.html#testimonial" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
-          <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Blog</a></li>
+          <li class="nav-item"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Blog</a></li>
           <li class="nav-item"> <a class="nav-link" href="index.html#contact" tabindex="-1" aria-disabled="true">Contato</a></li>
         </ul>
       </div>
