--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item active"> <a class="nav-link" href="#">Inicio</a> </li>
           <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre Nós</a></li>
-          <li class="nav-item"> <a class="nav-link" href="#activity" tabindex="-1" aria-disabled="true">Atividades</a></li>
-          <li class="nav-item"> <a class="nav-link" href="portfolio.html tabindex="-1" aria-disabled="true">Portfolio</a></li>
-          <li class="nav-item"> <a class="nav-link" href="#testemunhos.html" tabindex="-1" aria-disabled="true">Testemuhos</a></li>
+          <li class="nav-item"> <a class="nav-link" href="atividades.html" tabindex="-1" aria-disabled="true">Atividades</a></li>
+          <li class="nav-item"> <a class="nav-link" href="portfolio.html" tabindex="-1" aria-disabled="true">Portfolio</a></li>
+          <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemuhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Blog</a></li>
           <li class="nav-item"> <a class="nav-link" href="#contact" tabindex="-1" aria-disabled="true">Contato</a></li>
         </ul>
