--- a/portfolio.html
+++ b/portfolio.html
@@ -23,9 +23,9 @@
         <ul class="navbar-nav mx-auto">
           <li class="nav-item"> <a class="nav-link" href="index.html">Inicio</a> </li>
           <li class="nav-item"> <a class="nav-link" href="sobrenos.html" tabindex="-1" aria-disabled="true">Sobre nós</a></li>
-          <li class="nav-item"> <a class="nav-link" href="index.html#activity" tabindex="-1" aria-disabled="true">Atividades</a></li>
+          <li class="nav-item"> <a class="nav-link" href="atividades.html" tabindex="-1" aria-disabled="true">Atividades</a></li>
           <li class="nav-item active"> <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Portfolio</a></li>
-          <li class="nav-item"> <a class="nav-link" href="index.html#testimonial" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
+          <li class="nav-item"> <a class="nav-link" href="testemunhos.html" tabindex="-1" aria-disabled="true">Testemunhos</a></li>
           <li class="nav-item"> <a class="nav-link" href="blog.html" tabindex="-1" aria-disabled="true">Blog</a></li>
           <li class="nav-item"> <a class="nav-link" href="index.html#contact" tabindex="-1" aria-disabled="true">Contato</a></li>
         </ul>
