--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
     <div class="card"> <img class="card-img" src="assets/img/dreamer1.png" alt="">
       <div class="card-img-overlay">
         <div class="center-text">
-          <h2 class="card-title">Vamos sempre mantê-lo informado</h2>
+          <h2 class="card-title">Vamos mantê-lo sempre informado</h2>
           <a href="#hey" class="btn">
             <svg width="201" height="51" viewBox="0 0 201 51">
               <defs>
