--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="card-img-overlay">
         <div class="center-text">
           <h2 class="card-title">Um clique de ouro</h2>
-          <a href="#about" class="btn">
+          <a href="sobrenos.html" class="btn">
             <svg width="201" height="51" viewBox="0 0 201 51">
               <defs>
                 <style>
@@ -54,7 +54,7 @@
             </defs>
             <rect id="Rounded_Rectangle_1" data-name="Rounded Rectangle 1" class="cls-1" x="0.5" y="0.5" width="200" height="50" rx="25" ry="25"/>
           </svg>
-        <a href="sobrenos.html"> Explore </a> </div>
+		  Explore </a> </div>
       </div>
     </div>
   </div>
