--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="container-fluid fh5co-home-banner">
     <div class="card"> <img class="card-img" src="assets/img/dreamer2.png" alt style="height: 600px;">
       <div class="card-img-overlay">
-        <div class="center-text">
+        <div class="center-text" style=" top: 300px;">
           <h2 class="card-title">Um clique de ouro</h2>
           <a href="sobrenos.html" class="btn">
             <svg width="201" height="51" viewBox="0 0 201 51">
