--- a/atividades.html
+++ b/atividades.html
@@ -70,7 +70,7 @@
         <h2>Ativade do mês</h2>
         <div class="owl-carousel owl-carousel3 owl-theme">
           <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo1.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/j&c1.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -80,7 +80,7 @@
             </div>
           </div>
           <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo2.jpg"  alt="">
+            <div class="card"> <img class="card-img" src="assets/img/j&c2.jpg"  alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -90,7 +90,7 @@
             </div>
           </div>
           <div>
-            <div class="card"> <img class="card-img" src="assets/img/modelo3.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/lucrecia.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -100,7 +100,7 @@
             </div>
           </div>
 		   <div>
-            <div class="card"> <img class="card-img" src="assets/img/DSC_0158 2.jpg" alt="">
+            <div class="card"> <img class="card-img" src="assets/img/bruna3.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
@@ -177,7 +177,7 @@
                 </div>
               </div>
             </div>
-          </div> <div class="card"> <img class="card-img" src="assets/img/modelo12.jpg" alt="">
+          </div> <div class="card"> <img class="card-img" src="assets/img/team.jpg" alt="">
               <div class="card-img-overlay">
                 <div class="bottom-text">
                   <h5 class="card-title">Sed ut perspiciatis unde &nbsp; iste natus error sit volup</h5>
