--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
           <div class="card"> <img class="card-img" src="assets/img/IMG_0303.JPG" alt="">
             <div class="card-img-overlay"> <a href="#"><img src="assets/img/heart.png" class="heart" alt="heart icon"></a>
               <div class="bottom-text">
-                <h5 class="card-title">Sessão fotográfica em estúdio</h5>
+                <h5 class="card-title">Sessão fotográfica em estúdio<br>Clica para ver mais.</h5>
               </div>
             </div>
           </div>
