--- a/sobrenos.html
+++ b/sobrenos.html
@@ -115,7 +115,7 @@ na área publicitária e eventos musicais.
 
 
 Aguardamos o seu contacto!</p>
-            <a href="#" class="btn">CONTATO</a> </div>
+            <a href="#" class="btn">Faça já a sua marcação"</a> </div>
           </div>
         </div>
       </div>
